# phionyx-mcp-server

./: README.md  pyproject.toml
.github/workflows/: release.yml
specs/: threats.md
specs/rge_v0_2/: migration_v0_1_to_v0_2.md  rge_v0_2.md  rge_v0_2.schema.json  rge_v0_2_examples.md
src/phionyx_mcp_server/: __init__.py  __main__.py  audit_chain.py  cli.py  descriptor_hash.py  server.py  trace.py
src/phionyx_mcp_server/capabilities/: __init__.py
tests/: test_audit_chain.py  test_descriptor_hash.py
