[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "phionyx-mcp-server"
version = "0.1.0-dev"
description = "Phionyx MCP trust boundary governance layer — descriptor signing, runtime guardrail, tamper-evident audit chain for MCP-capable hosts."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "AGPL-3.0-or-later"}
authors = [{name = "Ali Toygar Abak", email = "founder@phionyx.ai"}]
keywords = [
    "mcp",
    "model-context-protocol",
    "ai-governance",
    "tool-poisoning-defense",
    "audit-chain",
    "phionyx",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "mcp>=1.27.0",
    "phionyx-core>=0.3.0",
    "pydantic>=2.0",
    "cryptography>=42.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "jsonschema>=4.20",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "jsonschema>=4.20",
    "ruff>=0.6",
    "mypy>=1.10",
]

[project.scripts]
phionyx-mcp-server = "phionyx_mcp_server.__main__:main"
phionyx-mcp = "phionyx_mcp_server.cli:main"

[project.urls]
Homepage = "https://phionyx.ai"
Repository = "https://github.com/halvrenofviryel/phionyx-mcp-server"
Documentation = "https://github.com/halvrenofviryel/phionyx-mcp-server/tree/main/specs/rge_v0_2"
"Bug Tracker" = "https://github.com/halvrenofviryel/phionyx-mcp-server/issues"
"Project Hub" = "https://github.com/halvrenofviryel/phionyx-research"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
